# GodotPoker

./: .gitignore  .gitmodules  CMakeLists.txt  SConstruct  project.godot  setup_dev.sh
GodotPoker/: CMakeLists.txt
GodotPoker/src/card/: card.cpp  card.h  deck.cpp  deck.h
GodotPoker/src/logic/card/: card.cpp  card.h
GodotPoker/src/logic/manager/: manager.h
GodotPoker/src/manager/: manager.cpp  manager.h
GodotPoker/src/net/server/: server.h  tcp_connection.cpp  tcp_connection.h
GodotPoker/src/player/: player.cpp  player.h
scenes/: inGame.tscn
src/godot/: godot_player.cpp  godot_player.h  godot_poker.h
src/logic/: get_combination.cpp  model.cpp  model.h
src/logic/card/: card.cpp  card.h  deck.cpp  deck.h
src/logic/manager/: manager.cpp  manager.h
src/logic/player/: player.cpp  player.h
src/net/client/: client.cpp  client.h
src/net/server/: server.cpp  server.h
